--- a/PerfDemos/PerfDemos.csproj
+++ b/PerfDemos/PerfDemos.csproj
@@ -44,6 +44,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Boxing-Interfaces.cs" />
+    <Compile Include="Boxing-StringFormat.cs" />
     <Compile Include="Boxing.cs" />
     <Compile Include="Enum.cs" />
     <Compile Include="Params.cs" />
